--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "reco_luan",
   "scripts": {
     "dev": "vuepress dev . --open --host \"localhost\"",
-    "build": "vuepress build ."
+    "build": "vuepress build .",
+    "deploy-gh":"GH=1 yarn docs:build && bash scripts/deploy-gh.sh"
   },
   "devDependencies": {
     "vuepress": "1.8.2",
